@@ -15,7 +15,14 @@ import static com.room.to.rent.backend.user.Permission.*;
 @RequiredArgsConstructor
 public enum Role {
 
-    USER(Collections.emptySet()),
+    USER(
+            Set.of(
+                    USER_READ,
+                    USER_CREATE,
+                    USER_UPDATE,
+                    USER_DELETE
+            )
+    ),
     ADMIN(
             Set.of(
                     ADMIN_READ,
